Improve diagnostics, VM calls, and parser
Add richer type error handling and diagnostics formatting, and wire them through the CLI: introduce TypeErrorException, format and print AuroraDiagnostic in Main, and add timing output. Enhance the TypeChecker with member resolution, numeric widening, better call/access/index handling and more precise type checking. Update the Compiler to throw TypeErrorException, refine call/invoke/static method codegen, native wrapper call semantics, and various codegen fixes. Revamp the VM call/argument handling (preserve arg order, add arToString, modernize callValue), and update IoModule native bindings to use ArObject and VM for printing and file I/O. Parser and AST updates: introduce exprBlock (block or expression) support for if/else and if-expr, adjust BlockStmt behavior, and other parser fixes. Also add CHANGELOG, tidy IDE files.